--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- jQuery library -->
-    
-   
-
-    <!-- Latest compiled JavaScript -->
-    <script type="text/javascript" src="js/jquery-2.2.4.min"></script>
+	<script type="text/javascript" src="js/jquery-2.2.4.js"></script>
     <script type="text/javascript" src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/angular-animate.min.js"></script>
-    <script type="text/javascript" src="js/RandQuote.js"></script>
+	<script type="text/javascript" src="js/angular-animate.min.js"></script>
+	<script type="text/javascript" src="js/viewer.js"></script>
+    
 </head>
-
+<body>
 <main ng-app="viewer" ng-controller="mainCtrl">
   <div id="example2">
     <div id="header">
@@ -32,7 +28,7 @@
         <div class="search-button2">
           <span><img src="http://bit.ly/29zLcCL" /></span>
         </div>
-        <div id="search" class="search-box2">
+        <div class="search-box2">
           <form ng-submit="search()" id="search">
             <input type="text" ng-model="searchTxt" placeholder="Type your keyword..." />
             <img src="http://bit.ly/299bJFH" />
@@ -54,3 +50,5 @@
     </ul>
   </div>
 </main>
+</body>
+</html>
