--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="search-button2">
           <span><img src="http://bit.ly/29zLcCL" /></span>
         </div>
-        <div class="search-box2">
-          <form ng-submit="search()" id="search">
+        <div id="search" class="search-box2">
+          <form ng-submit="search()">
             <input type="text" ng-model="searchTxt" placeholder="Type your keyword..." />
             <img src="http://bit.ly/299bJFH" />
           </form>
